--- a/webapp/view/Details.view.xml
+++ b/webapp/view/Details.view.xml
@@ -1,6 +1,7 @@
 <mvc:View
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
+    xmlns:core="sap.ui.core"
     xmlns:smartForm="sap.ui.comp.smartform"
     xmlns:smartField="sap.ui.comp.smartfield"
     controllerName="zpcveiculo.controller.Details"
@@ -188,7 +189,7 @@
                         </OverflowToolbar>
                     </headerToolbar>
                     <columns>
-                        <Column
+                        <!-- <Column
                             id="idVehicleColumn"
                             hAlign="Center"
                             importance="High"
@@ -198,7 +199,7 @@
                                 id="idsaplabelVeiculoText"
                                 text="{/#VeiculoAtribUnidTransp/Vehicle/@sap:label}"
                             />
-                        </Column>
+                        </Column> -->
                         <Column
                             id="idTuNumberColumn"
                             hAlign="Center"
@@ -206,11 +207,11 @@
                             width="7em"
                         >
                             <Text
-                                id="idsaplabelTuNumberText"
-                                text="{/#VeiculoAtribUnidTransp/TuNumber/@sap:label}"
+                                id="idUnidTransporteText"
+                                text="{i18n>txtTU}"
                             />
                         </Column>
-                        <Column
+                        <!-- <Column
                             id="idSeqNumberColumn"
                             hAlign="Center"
                             importance="High"
@@ -220,6 +221,17 @@
                                 id="idsaplabelSeqNmbrText"
                                 text="{/#VeiculoAtribUnidTransp/SeqNmbr/@sap:label}"
                             />
+                        </Column> -->
+                        <Column
+                            id="idTuTextColumn"
+                            hAlign="Center"
+                            importance="High"
+                            width="7em"
+                        >
+                            <Text
+                                id="idDescrioText"
+                                text="{i18n>txtDescription}"
+                            />
                         </Column>
                     </columns>
                     <items>
@@ -228,7 +240,7 @@
                             vAlign="Middle"
                         >
                             <cells>
-                                <HBox
+                                <!-- <HBox
                                     id="id1HBox"
                                     alignItems="Center"
                                     alignContent="Center"
@@ -247,7 +259,7 @@
                                         text="{tableAtribTUData>Vehicle}"
                                         visible="{= ${tableAtribTUData>mode} === 'V' || ${tableAtribTUData>mode} === 'U' }"
                                     />
-                                </HBox>
+                                </HBox> -->
                                 <HBox
                                     id="id2HBox"
                                     alignItems="Center"
@@ -261,14 +273,40 @@
                                         editable="{= ${tableAtribTUData>mode} === 'I' }"
                                         maxLength="10"
                                         visible="{= ${tableAtribTUData>mode} === 'I' }"
-                                    />
+                                        valueHelpOnly="true"
+                                        valueHelpRequest="onSelectDialogPress"
+                                        showValueHelp="true"
+                                    >
+                                        <customData>
+                                            <core:CustomData
+                                                key="title"
+                                                value="{i18n>txtTU}"
+                                            />
+                                            <core:CustomData
+                                                key="key"
+                                                value="TuNumber"
+                                            />
+                                            <core:CustomData
+                                                key="path"
+                                                value="/ZshTuSet"
+                                            />
+                                            <core:CustomData
+                                                key="multi"
+                                                value="false"
+                                            />
+                                            <core:CustomData
+                                                key="descr"
+                                                value="TuText"
+                                            />
+                                        </customData>
+                                    </Input>
                                     <ObjectIdentifier
                                         id="idTuNumberObjectIdentifier"
                                         text="{tableAtribTUData>TuNumber}"
                                         visible="{= ${tableAtribTUData>mode} === 'V' || ${tableAtribTUData>mode} === 'U' }"
                                     />
                                 </HBox>
-                                <HBox
+                                <!-- <HBox
                                     id="id3HBox"
                                     alignItems="Center"
                                     alignContent="Center"
@@ -287,7 +325,11 @@
                                         text="{tableAtribTUData>SeqNmbr}"
                                         visible="{= ${tableAtribTUData>mode} === 'V' || ${tableAtribTUData>mode} === 'U' }"
                                     />
-                                </HBox>
+                                </HBox> -->
+                                <ObjectIdentifier
+                                    id="idTuTextObjectIdentifier"
+                                    text="{tableAtribTUData>TuText}"
+                                />
                             </cells>
                         </ColumnListItem>
                     </items>
