fixed search help cols texts

--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -19,6 +19,7 @@
                         index="1"
                         key="Carrier"
                         visibleInAdvancedArea="true"
+                        mandatory="mandatory"
                     />
                     <smartFilterBar:ControlConfiguration
                         id="idVehTypeControlConfiguration"
